<resources>
    <string name="app_name">BotContentFiller</string>
    <string name="action_settings">Settings</string>
    <string name="edit_map">Edit map</string>
    <string name="go_top">Go top</string>
    <string name="go_left">Go left</string>
    <string name="go_right">Go right</string>
    <string name="go_bot">Go bottom</string>
    <string name="edit_map_defaults">Edit map defaults</string>
    <string name="save_map">Save</string>
    <string name="edit_behind_defaults">Edit behind defaults</string>
    <string name="edit_left_defaults">Edit left defaults</string>
    <string name="edit_top_defaults">Edit top defaults</string>
    <string name="edit_right_defaults">Edit right defaults</string>
    <string name="edit_bottom_defaults">Edit bottom defaults</string>
    <string name="add">Add</string>
    <string name="edit_unpassable_defaults">Текст для непроходимой местности</string>
    <string name="edit_looking_for_way_defaults">рассказ о том как ты искал пути</string>
    <string name="custom_looking_for_way_prefix">Кастомный рассказ о поиске пути</string>
    <string name="custom_description">Кастомный рассказ об этом тайле</string>
    <string name="next_righ_tile_descr">направо виднеется</string>
    <string name="next_righ_behind_text">\"За ним\" кастомный текст направо</string>
    <string name="far_behind_righ_text">описание того что далеко направо</string>
    
    <string name="next_left_tile_descr">налево виднеется</string>
    <string name="next_left_behind_text">\"За ним\" кастомный текст налево</string>
    <string name="far_behind_left_text">описание того что далеко налево</string>
    
    <string name="next_top_tile_descr">вверх виднеется</string>
    <string name="next_top_behind_text">\"За ним\" кастомный текст вверх</string>
    <string name="far_behind_top_text">описание того что далеко вверх</string>
    
    <string name="next_bottom_tile_descr">вниз виднеется</string>
    <string name="next_bottom_behind_text">\"За ним\" кастомный текст вниз</string>
    <string name="far_behind_bottom_text">описание того что далеко вниз</string>
    <string name="edit_tile">Заполнить вручную</string>
    <string name="events">Эвенты</string>
    <string name="is_global">Случится для всех на этой клетке</string>
    <string name="probability">Процент вероятности</string>
    <string name="unpassable">Непроходимая ячейка</string>
    <string name="edit_unknown_defaults">Edit unknown defaults</string>
    <string name="can_see_throw">Можно ли видеть сквозь эту ячейку</string>
    <string name="next_tile_descr">Как этот тайл виден со стороны</string>
    <string name="this_tile_descr">Описание тайла</string>
    <string name="far_behind_descr">Как этот тайл виден издалека</string>
    <string name="plus">plus</string>
    <string name="name">Название</string>
    <string name="edit_tiles">Edit tiles</string>
    <string name="edit_biomes">Biomes</string>
    <string name="from_biome">From biome</string>
    <string name="action_fill_random_from_biome">Заполнить рандомно из биомов</string>
    <string name="biomes_list">Список биомов</string>
    <string name="biome_editing">Редактирование биома</string>
    <string name="biome_tiles_list">Список тайлов биома</string>
    <string name="biome_tile_editing">Редактирование тайла биома</string>
    <string name="biome_color">Цвет биома</string>
    <string name="fillFromBiome">Заполнить биомом</string>
    <string name="select_biome_before">Выбери биом сначала</string>
    <string name="export">Export</string>
    <string name="action_import">Import</string>
    <string name="tile_filling">Заполнение тайла вручную</string>
    <string name="defaults_filling">Заполнение общих строк</string>
    <string name="biome_title">Биом:</string>
    <string name="edit_beginning_phrases">Стартовые фразы</string>
    <string name="edit_event_help">Текст возникающий когда случится это событие</string>
    <string name="probability_from_attention_factor">Мультипликатор вероятности зависящий от внимательности</string>
    <string name="probability_from_stealth_factor">Мультипликатор вероятности зависящий от скрытности</string>
    <string name="stealth_factor">Мультипликатор скрытности</string>
    <string name="edit_events">Events</string>
    <string name="edit_work_types">Work types</string>
    <string name="title_name">Название</string>
    <string name="base_worktime">Базовое время работы</string>
    <string name="buildings_list">Здания</string>
    <string name="building_editing">Редактирование здания</string>
    <string name="description">Описание</string>
    <string name="energy_output">Производит энергии</string>
    <string name="energy_requered">Требует энергии</string>
    <string name="temperature_output">Производит тепла</string>
    <string name="cant_work_without">Не может работать без</string>
    <string name="events_list">список евентов</string>
    <string name="event_editing">Редактирование евента</string>
    <string name="item_editing">Редактирование предмета</string>
    <string name="items_editing">Редактирование предметов</string>
    <string name="effects">Описание эффектов</string>
    <string name="weight">Вес</string>
    <string name="accuracy">Точность</string>
    <string name="damage">Базовый урон</string>
    <string name="range">Дальность</string>
    <string name="minDps">минимальный урон</string>
    <string name="maxDps">макс урон</string>
    <string name="temperature_modificator">Теплоудержание одеждой</string>
    <string name="wear_type">тип одежды</string>
    <string name="item_group">item group</string>
    <string name="accuracy_range_factor">Зависимость точности от расстояния</string>
    <string name="accuracy_damage_factor">зависимость урона от расстояни</string>
    <string name="armor">броня</string>
    <string name="max_helth">максимальное здоровье</string>
    <string name="body_parts_coverage">Покрываемые части тела</string>
    <string name="speed_factor">мультипликатор скороси</string>
    <string name="stealth_additional">добавочная скрытность</string>
    <string name="speed_additional">Добавочная скорость</string>
    <string name="initial_buildings">Начальные строения</string>
    <string name="possible_events">возможные евенты</string>
    <string name="available_worktypes">Доступные типы работы</string>
    <string name="resources_editing">Редактирование ресурсов</string>
</resources>
