<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <com.bottools.botcontentfiller.ui.views.PositionIndicator
        android:id="@+id/positionIndicator"
        android:layout_width="match_parent"
        android:layout_above="@+id/texts_layout"
        android:layout_below="@+id/app_bar_layout"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/texts_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/custom_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/way_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <Button
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:padding="0dp"
            android:textSize="12sp"
            android:layout_height="30dp"
            android:text="@string/edit_tile" />


        <Button
            android:id="@+id/go_top"
            android:layout_width="match_parent"
            android:padding="0dp"
            android:textSize="12sp"
            android:layout_height="30dp"
            android:text="@string/go_top" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/go_left"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:textSize="12sp"
                android:text="@string/go_left" />

            <Button
                android:id="@+id/go_right"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:padding="0dp"
                android:textSize="12sp"
                android:layout_weight="1"
                android:text="@string/go_right" />
        </LinearLayout>

        <Button
            android:id="@+id/go_bot"
            android:layout_width="match_parent"
            android:padding="0dp"
            android:textSize="12sp"
            android:layout_height="30dp"
            android:text="@string/go_bot" />


    </LinearLayout>
</RelativeLayout>